@@ -42,7 +42,7 @@ class Draw(Widget, MouseEvent):
         self.geometry(f"+{self.wcfg['position_x']}+{self.wcfg['position_y']}")
 
         # Config style & variable
-        text_def = "n/a"
+        text_def = "-.--"
         fg_color_cap = self.wcfg["font_color_caption"]
         bg_color_cap = self.wcfg["bkg_color_caption"]
         font_fuel = tkfont.Font(family=self.wcfg["font_name"],
@@ -56,50 +56,56 @@ class Draw(Widget, MouseEvent):
         if self.wcfg["show_caption"]:
             bar_style_desc = {"bd":0, "height":1, "padx":0, "pady":0,
                               "font":font_desc, "fg":fg_color_cap, "bg":bg_color_cap}
-            self.bar_desc_1 = tk.Label(self, bar_style_desc, text="fuel")
-            self.bar_desc_2 = tk.Label(self, bar_style_desc, text="refuel")
-            self.bar_desc_3 = tk.Label(self, bar_style_desc, text="used")
-            self.bar_desc_4 = tk.Label(self, bar_style_desc, text="laps")
-            self.bar_desc_5 = tk.Label(self, bar_style_desc, text="mins")
-            self.bar_desc_6 = tk.Label(self, bar_style_desc, text="pits")
-            self.bar_desc_1.grid(row=0, column=0, padx=0, pady=0, sticky="we")
-            self.bar_desc_2.grid(row=0, column=1, padx=0, pady=0, sticky="we")
-            self.bar_desc_3.grid(row=0, column=2, padx=0, pady=0, sticky="we")
-            self.bar_desc_4.grid(row=3, column=0, padx=0, pady=0, sticky="we")
-            self.bar_desc_5.grid(row=3, column=1, padx=0, pady=0, sticky="we")
-            self.bar_desc_6.grid(row=3, column=2, padx=0, pady=0, sticky="we")
+            self.bar_desc_curr = tk.Label(self, bar_style_desc, text="fuel")
+            self.bar_desc_need = tk.Label(self, bar_style_desc, text="refuel")
+            self.bar_desc_used = tk.Label(self, bar_style_desc, text="used")
+            self.bar_desc_laps = tk.Label(self, bar_style_desc, text="laps")
+            self.bar_desc_mins = tk.Label(self, bar_style_desc, text="mins")
+            self.bar_desc_pits = tk.Label(self, bar_style_desc, text="pits")
+            self.bar_desc_curr.grid(row=0, column=0, padx=0, pady=0, sticky="we")
+            self.bar_desc_need.grid(row=0, column=1, padx=0, pady=0, sticky="we")
+            self.bar_desc_used.grid(row=0, column=2, padx=0, pady=0, sticky="we")
+            self.bar_desc_laps.grid(row=3, column=0, padx=0, pady=0, sticky="we")
+            self.bar_desc_mins.grid(row=3, column=1, padx=0, pady=0, sticky="we")
+            self.bar_desc_pits.grid(row=3, column=2, padx=0, pady=0, sticky="we")
 
-        self.bar_fuel_1 = tk.Label(self, text=text_def, font=font_fuel,
-                                   height=1, width=7, padx=0, pady=0, bd=0,
-                                   fg=self.wcfg["font_color_fuel"],
-                                   bg=self.wcfg["bkg_color_fuel"])
-        self.bar_fuel_2 = tk.Label(self, text=text_def, font=font_fuel,
-                                   height=1, width=7, padx=0, pady=0, bd=0,
-                                   fg=self.wcfg["font_color_fuel"],
-                                   bg=self.wcfg["bkg_color_fuel"])
-        self.bar_fuel_3 = tk.Label(self, text=text_def, font=font_fuel,
-                                   height=1, width=6, padx=0, pady=0, bd=0,
-                                   fg=self.wcfg["font_color_consumption"],
-                                   bg=self.wcfg["bkg_color_consumption"])
-        self.bar_fuel_4 = tk.Label(self, text=text_def, font=font_fuel,
-                                   height=1, width=7, padx=0, pady=0, bd=0,
-                                   fg=self.wcfg["font_color_estimate"],
-                                   bg=self.wcfg["bkg_color_estimate"])
-        self.bar_fuel_5 = tk.Label(self, text=text_def, font=font_fuel,
-                                   height=1, width=7, padx=0, pady=0, bd=0,
-                                   fg=self.wcfg["font_color_estimate"],
-                                   bg=self.wcfg["bkg_color_estimate"])
-        self.bar_fuel_6 = tk.Label(self, text=text_def, font=font_fuel,
-                                   height=1, width=6, padx=0, pady=0, bd=0,
-                                   fg=self.wcfg["font_color_pits"],
-                                   bg=self.wcfg["bkg_color_pits"])
-        self.bar_fuel_1.grid(row=1, column=0, padx=0, pady=0)
-        self.bar_fuel_2.grid(row=1, column=1, padx=0, pady=0)
-        self.bar_fuel_3.grid(row=1, column=2, padx=0, pady=0)
-        self.bar_fuel_4.grid(row=2, column=0, padx=0, pady=(bar_gap, 0))
-        self.bar_fuel_5.grid(row=2, column=1, padx=0, pady=(bar_gap, 0))
-        self.bar_fuel_6.grid(row=2, column=2, padx=0, pady=(bar_gap, 0))
+        bar_style_fuel = {"bd":0, "width":7, "height":1, "padx":0, "pady":0,
+                          "font":font_fuel, "text":text_def}
 
+        self.bar_fuel_curr = tk.Label(self, bar_style_fuel,
+                                      fg=self.wcfg["font_color_fuel"],
+                                      bg=self.wcfg["bkg_color_fuel"])
+        self.bar_fuel_need = tk.Label(self, bar_style_fuel,
+                                      fg=self.wcfg["font_color_fuel"],
+                                      bg=self.wcfg["bkg_color_fuel"])
+        self.bar_fuel_used = tk.Label(self, bar_style_fuel, width=6,
+                                      fg=self.wcfg["font_color_consumption"],
+                                      bg=self.wcfg["bkg_color_consumption"])
+        self.bar_fuel_laps = tk.Label(self, bar_style_fuel,
+                                      fg=self.wcfg["font_color_estimate"],
+                                      bg=self.wcfg["bkg_color_estimate"])
+        self.bar_fuel_mins = tk.Label(self, bar_style_fuel,
+                                      fg=self.wcfg["font_color_estimate"],
+                                      bg=self.wcfg["bkg_color_estimate"])
+        self.bar_fuel_pits = tk.Label(self, bar_style_fuel, width=6,
+                                      fg=self.wcfg["font_color_pits"],
+                                      bg=self.wcfg["bkg_color_pits"])
+        self.bar_fuel_curr.grid(row=1, column=0, padx=0, pady=0)
+        self.bar_fuel_need.grid(row=1, column=1, padx=0, pady=0)
+        self.bar_fuel_used.grid(row=1, column=2, padx=0, pady=0)
+        self.bar_fuel_laps.grid(row=2, column=0, padx=0, pady=(bar_gap, 0))
+        self.bar_fuel_mins.grid(row=2, column=1, padx=0, pady=(bar_gap, 0))
+        self.bar_fuel_pits.grid(row=2, column=2, padx=0, pady=(bar_gap, 0))
+
+        # Last data
+        self.last_amount_curr = 0
+        self.last_amount_need = 0
+        self.last_used_last = 0
+        self.last_est_runlaps = 0
+        self.last_est_runmins = 0
+        self.last_pit_required = 0
+
+        # Start updating
         self.update_data()
 
         # Assign mouse event
@@ -113,27 +119,52 @@ class Draw(Widget, MouseEvent):
             (amount_curr, amount_need, used_last, est_runlaps, est_runmins, pit_required
              ) = module.fuel_usage.output_data
 
-            # Start updating
-            # Low fuel warning
-            lowfuel_color = self.color_lowfuel(est_runlaps)
-            # Current fuel & total needed fuel
-            self.bar_fuel_1.config(text=f"{amount_curr:.2f}", bg=lowfuel_color)
-            self.bar_fuel_2.config(text=f"{min(max(amount_need, -999.9), 999.9):+0.1f}", bg=lowfuel_color)
-            # Last lap fuel consumption
-            self.bar_fuel_3.config(text=f"{used_last:.2f}")
-            # Estimated laps & minutes current fuel can last
-            self.bar_fuel_4.config(text=str(f"{min(est_runlaps, 9999):.1f}"))
-            self.bar_fuel_5.config(text=str(f"{min(est_runmins, 9999):.1f}"))
-            # Estimated pit stops
-            self.bar_fuel_6.config(text=str(f"{min(max(pit_required, 0), 99.99):.2f}"))
+            # Current remaining fuel
+            amount_curr = f"{amount_curr:.2f}"
+            self.update_fuel_data("curr", amount_curr, self.last_amount_curr, est_runlaps)
+            self.last_amount_curr = amount_curr
+
+            # Total needed fuel
+            amount_need = f"{min(max(amount_need, -999.9), 999.9):+0.1f}"
+            self.update_fuel_data("need", amount_need, self.last_amount_need, est_runlaps)
+            self.last_amount_need = amount_need
+
+            # Estimated fuel consumption
+            used_last = f"{used_last:.2f}"
+            self.update_fuel_data("used", used_last, self.last_used_last)
+            self.last_used_last = used_last
+
+            # Estimated laps current fuel can last
+            est_runlaps = f"{min(est_runlaps, 9999):.1f}"
+            self.update_fuel_data("laps", est_runlaps, self.last_est_runlaps)
+            self.last_est_runlaps = est_runlaps
+
+            # Estimated minutes current fuel can last
+            est_runmins = f"{min(est_runmins, 9999):.1f}"
+            self.update_fuel_data("mins", est_runmins, self.last_est_runmins)
+            self.last_est_runmins = est_runmins
+
+            # Estimated pitstops required to finish race
+            pit_required = f"{min(max(pit_required, 0), 99.99):.2f}"
+            self.update_fuel_data("pits", pit_required, self.last_pit_required)
+            self.last_pit_required = pit_required
 
         # Update rate
         self.after(self.wcfg["update_delay"], self.update_data)
 
+    # GUI update methods
+    def update_fuel_data(self, suffix, curr, last, state=None):
+        """Update fuel data"""
+        if curr != last:
+            if state:  # low fuel warning
+                getattr(self, f"bar_fuel_{suffix}").config(text=curr, bg=self.color_lowfuel(state))
+            else:
+                getattr(self, f"bar_fuel_{suffix}").config(text=curr)
+
     # Additional methods
     def color_lowfuel(self, fuel):
         """Low fuel warning color"""
-        if fuel > 2:
+        if fuel >= self.wcfg["low_fuel_lap_threshold"]:
             color = self.wcfg["bkg_color_fuel"]
         else:
             color = self.wcfg["bkg_color_low_fuel"]
